@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile install postinst preinst prepare
+DEPEND=>=sys-apps/baselayout-2.1-r1 kernel_FreeBSD? ( || ( >=sys-freebsd/freebsd-ubin-9.0_rc sys-process/fuser-bsd ) ) elibc_glibc? ( >=sys-libs/glibc-2.5 ) ncurses? ( sys-libs/ncurses ) pam? ( sys-auth/pambase ) tools? ( dev-lang/perl ) kernel_linux? ( sys-process/psmisc ) selinux? ( sec-policy/selinux-base-policy sec-policy/selinux-openrc sys-libs/libselinux ) !<sys-fs/udev-init-scripts-27 virtual/os-headers ncurses? ( virtual/pkgconfig )
+DESCRIPTION=OpenRC manages the services, startup and shutdown of a host
+EAPI=5
+HOMEPAGE=http://www.gentoo.org/proj/en/base/openrc/
+IUSE=debug elibc_glibc ncurses pam newnet prefix +netifrc selinux static-libs tools unicode kernel_linux kernel_FreeBSD
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd
+LICENSE=BSD-2
+PDEPEND=netifrc? ( net-misc/netifrc )
+RDEPEND=>=sys-apps/baselayout-2.1-r1 kernel_FreeBSD? ( || ( >=sys-freebsd/freebsd-ubin-9.0_rc sys-process/fuser-bsd ) ) elibc_glibc? ( >=sys-libs/glibc-2.5 ) ncurses? ( sys-libs/ncurses ) pam? ( sys-auth/pambase ) tools? ( dev-lang/perl ) kernel_linux? ( sys-process/psmisc ) selinux? ( sec-policy/selinux-base-policy sec-policy/selinux-openrc sys-libs/libselinux ) !<sys-fs/udev-init-scripts-27 !prefix? ( kernel_linux? ( || ( >=sys-apps/sysvinit-2.86-r6 sys-process/runit ) ) kernel_FreeBSD? ( sys-freebsd/freebsd-sbin ) )
+SLOT=0
+SRC_URI=http://dev.gentoo.org/~williamh/dist/openrc-0.13.tar.bz2
+_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pam	aa1ebb3ab720ea04dbbdd6eaaf9554ed	toolchain-funcs	0f1760274637a138b99bb649202ea402
+_md5_=90889f392990bbf5fd8135ea6953d2c7
