@@ -1,0 +1,13 @@
+DEFINED_PHASES=postinst prepare
+DEPEND=>=virtual/udev-180 !<sys-fs/udev-186
+DESCRIPTION=udev startup scripts for openrc
+EAPI=5
+HOMEPAGE=http://www.gentoo.org
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
+LICENSE=GPL-2
+RDEPEND=>=virtual/udev-180 !<sys-fs/udev-186 >=sys-apps/openrc-0.13
+RESTRICT=test
+SLOT=0
+SRC_URI=http://dev.gentoo.org/~williamh/dist/udev-init-scripts-27.tar.bz2
+_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
+_md5_=4a73b863335c69b8692ccf0b5f6c3349
