@@ -8,14 +8,16 @@ AUX openrc-9999-pause.patch 825 SHA256 ffa34418921d30c589ad762a5d6d7640c37e7279c
 AUX openrc.logrotate 71 SHA256 0b44210db9770588bd491cd6c0ac9412d99124c6be4c9d3f7d31ec8746072f5c SHA512 690612fddfb2c4cf8f6b5ba7239b9faf29eb3d9b152ab4dcf62694aa2852780440d08cee56d98a9597607f446b3697c911269562821a8402bb5747cbbae34bd9 WHIRLPOOL 8678c51583c77a4985760e4ea2082e7214f28b68cad460b362d683db71067cf6031e1f3275e83ac7959b0973cdafd0a4102525fe7b0d975798ec2182d1fd2769
 AUX start-stop-daemon.pam 63 SHA256 2681da17e4a122656b5303b7c7eca82b8fb182641290b153fdbe96b63638086d SHA512 85cf440611b8f87f51bf24bdd9fa03639a75b950f00096d81b8826c21ae85ff9784b8c56b8ddb482e70f08bce933d4561b30750346d51fb2cef3be34acc065cb WHIRLPOOL 4abc9f051155a62d3033258a06003a4ca3909d8104deca84d5c1605bc1c7e56167fd82b2b4b72fe7b707070de98a7628730de1ad3f14b924b5b1480fba5ef854
 DIST openrc-0.12.4.tar.bz2 131914 SHA256 c4edda2fff4b613f50b9cc265bb457a9ab0170fbc1fe7c26eccd4a5d63b2625c SHA512 14e188e382dfe02037d3e4211fa3265152d5ec92ca491b1e86154c0615583ddfc0a2592ca849ab453068dd60000886e57e7da024036fa58d7474acdbb6b92208 WHIRLPOOL 7bdc2c310ee6e87a439574f377a3c1541a118b4122d098d727f6d4464e9f645e5a4d40bedfc82f401b53e640e78494f74fac94f9b6813eb202cc18d1c5391280
+DIST openrc-0.13.tar.bz2 135643 SHA256 5d35f8ac014dc6229c97713655c68d35adf395b692b5c7f92331ee9738a1c806 SHA512 0c7e3ddd06a306ed2e5775dbd00ffdf82cec17e85ff35a02d01dec10d60350aba5fed4d97f1f4c49b19165bd9d2c84c4e46aa28141f99838525c02f123ea36b5 WHIRLPOOL 2b95de5f35836592551ebae8d1606770d7bcd9a280c1bab5dc8956a102cc780422fc3987d4f35188180173bb46cc5d2eb971ecb193340760d5cd947a69f023dc
 EBUILD openrc-0.12.4.ebuild 10522 SHA256 0293519019d791318d61c2032d877023c91c9ccd960031505736529692cbc58a SHA512 447fb48c781b2945e22215eb7faabac5e67e401ea6e14559b765ac4963df11e61ff73c19dd1b5697420ad0ffff93de23c69a6dd423df06dc882e809d39fce0aa WHIRLPOOL e986349c14881af8f76ee322d5434272b6d025ea3e6ba03d798f49fd216c336332cd0e7932796588e50a64148dab744f1c4d004d2b9f1615e3b666078cd48884
+EBUILD openrc-0.13.ebuild 10592 SHA256 ba07f3fc3b2a259484890f4993747e996276f462832a4288dda6cd58eab0b597 SHA512 5c22f9d053c34a73a2d74a985749995a4223ddafca6f0fbd7246bc978110a09c0eea4fd9c4efddcad41c89db0b636cfe3548f91acf52d59375bcdfc875ee9965 WHIRLPOOL 7d4bc04eb5d3ada94ff34f4a26640b73cdbf29f48cecf8967e2d63cb93104c84f9199e417074fe063c4b945e289d502daf0026869604c6062daad6a4a23ece1e
 EBUILD openrc-9999.ebuild 10613 SHA256 935d77b929616e17077dc345aaab1e563fd8314adae42eace93b6107ee22a1f0 SHA512 85889643ad66a166074a2f801d240fd6a44a73e3e409df66ebc95178fdbdaa5b43df34ed0de647ae6a7dd4284f86af752259b8016b86f193aa2054d65240597d WHIRLPOOL eb9f21e11c3f66589feee8504511f13789ae6d1fc261691b7ce1bdda7225dbb78fc0831e7be14937801aa97c762237144559a3bc0ae5b867f5ff0dbea5c0b4cd
-MISC ChangeLog 49972 SHA256 74861f73a5380ed21dc0e2afdb68b983119250fa8947181ff55c7c08e3f9232e SHA512 5ad75ede3147cb70376e143c6ed038fe3c081c607a6c1ce06a8c0f600d6db92de4a1522d88de1fdaebdab5e53e26ebcddd94c3e1c86a3048dded1b15b05c8d0e WHIRLPOOL d324e39748f995a7a19326dc6d2fa90f655cad95c93410b2771347d007c568f66601d9094d0ecf27dfbf80cfbb750211c0fbf6308b5f9f8ffb72a6386ab2d13a
+MISC ChangeLog 50116 SHA256 499a5c26c6c6d953eb1b6b821c11efcaf21c9b461fb54f9af9e1462ae9b4915e SHA512 df0b214fcd963c4c56eaea241eb97c9eca4d37f8648db36871fa153e5a00319611df419cd3ebd976fd00cf66624116f938e3679594ac5ae1617f29ab07eceb41 WHIRLPOOL 535043a5eea10f7b2bf00482c40cc847bf95620760f6d753787a785faef07226fb28f3d411fdf3c7e17e8b817657452bd257eaf906b9af93b2822c993dff69ca
 MISC metadata.xml 373 SHA256 02f4a9ad32e00c6c046a55dd14949c4b5a3b9a8f5d4725aa07c698c107bbc1cf SHA512 80d1f2a14cddd37e7d8866ff556c753e631eca6239c0474f8a067bf387778e702a8d15152b1324744110b2f5972c2e2858eb195f8448001f322e19acc589e033 WHIRLPOOL 8a8176f52fd07682ee407923e956962ded7ce45f1b9b535e80b84195f6407954f504c44dc1b0f2cb2af8ed8a84a1e8b4cd5dc956163431c59bbc1f7785fb9151
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPpbHgACgkQblQW9DDEZTjrdQCfXgOxunJShqh7CVYCOkxO4K+C
-LSQAoKP/sBgu+vTobA7jJb5v+I1mWtEg
-=Res/
+iEYEAREIAAYFAlPw8UgACgkQblQW9DDEZThmbACgs7T1GXEu4cmZ2y8wy9tbIlmw
+81MAn35/mqnYRyQQLz1h93SeqUmuQL88
+=1Y4f
 -----END PGP SIGNATURE-----
