@@ -2,24 +2,16 @@
 Hash: SHA256
 
 DIST udev-init-scripts-26.tar.bz2 4921 SHA256 eff4cd581cb5d57a1fa09772f9f82a37d9a33a3828f0b7e988278a974864d203 SHA512 cbf5de51c7c1f63cfb7ded47175c3dfee0483972ce966d71bb164c78d6d6818d24a1e72cbaf9c3c0dda3674e6bb3b98c53a9e8cba27a8de6176689ddd39b0d9c WHIRLPOOL 6ade24698c8b1b1e7397f494e99e67e960505d846f21e8955e0a433dcde1d5ec5f580d13d867c78c13fc4157dbb532b0a5d4c1adedcda60f2e4186936a53b72a
+DIST udev-init-scripts-27.tar.bz2 3456 SHA256 1a091c361e9845861c138b505881edcb7b68fcf91708db526dff0b320243c936 SHA512 8a526d5252d54c724ad99250141d3ffddfbe6044ff9c9b9c02a4984f03ab6492a8b6a36022b93c7c06b0869b61a3c4dfa82fc47f560e927684fad636f56e4ba8 WHIRLPOOL 270a4ae1053a0303a851d6dcc5b51d2b89c5438b93f85dfb80726d11d61e950ae13e88b6063938f4ea8b49ae7167fb58211b6ce670f8d6c52212aed5da80b339
 EBUILD udev-init-scripts-26-r2.ebuild 2561 SHA256 6c8cbfd000580bd29de9880328ad04f2f9c68d959c083d8556ac4269f48b17a9 SHA512 8e498c61f9c0ada37bea748e4a6f9ce5f8a8329883c65b82625f8a13b182d7d54d56c37ca7ce6cd223e90a599bc421215cef83d067dd2ef958087500c0470f36 WHIRLPOOL 6feb2ff94424757e73575ea5f8186b8b10a42bf020e56d30627a00fe31047b0eaca1af897209bd849f84074210424ec0a558630016532e4113d88d35d15433cb
+EBUILD udev-init-scripts-27.ebuild 1992 SHA256 a94a6316f851a0e219a0dff98f31fdf86218c5bca1ac4ff1c502db4bc76763c1 SHA512 d2cf830e712147942f033b64295e2b6a7e5e6c6ec52809380357bfa37b0d88528ac0f706ef3fba715946ca69e9a705543043e05f207a6dfb08d88b3bc12d258f WHIRLPOOL 5490852057e0c4fd5910df7669c7c624f0879ec4cef9d2e5f201f7ec36f1a1824930de2d03300b28e9b861be098d8ad89a1d75460674dcf0c9194b46e632f98c
 EBUILD udev-init-scripts-9999.ebuild 2409 SHA256 665cbbf90f5c686ec2872394ad3e8cd86f7f072652aa84ab2f2d12dd1bd0415f SHA512 938507cb8c449b4e40b27be783d167d75f17dfaef5c5ddc38da7cb26ab38b464f9c4d865f07e32ccc5baae9648830b48f235180183d3491caa4dcc0db572bb74 WHIRLPOOL 2bbd1574eb40d29b3c06d89b76a79d5a385431bdeb1f3a4aa39152105c3a624e1c6703acbf88e22ab40316fea99419d7f5d00dabf21f1b57b63cacf4e0b4cc1a
-MISC ChangeLog 16003 SHA256 92da505c7111077ebec90ba3af8e85033b7553320f522bee83e6e2c1c387a3d2 SHA512 717537deec9f05d0fa2369366116bcf6608f18340b3093a0da31c100c23bf949d798f67e9595a485b65f28900d91e4907bbd8a559c9c9e86b72db77b9da169a3 WHIRLPOOL 2e2c0c5c747695560054e0ce6d4f1eabad38a2b09582ebfc7e8c2eb7380d07dbd8080f5bcbac30931d14b097459a5a44ed67761b9372840a41d3385c9be2a326
+MISC ChangeLog 16139 SHA256 912619a3ecdb00e7acefc3c1a17951d14c6ec2bffbaaefa38b0438d1bcecc0a5 SHA512 b3b7512b616d9be4dc45406006f49d03cf3bdba113e5173e8c0d7cd786deef5538f86a301e3b84c0646e905b9b847d19227a3733d47f5bcdb47bd50f7228954e WHIRLPOOL 8d5ccb3908da4e97f429aa83b7e6a081d629353806f28fac877fd4e45e5b5cf0e65a4a6e063884854fb4463eeb9294e26a53e64cc68a7aef5c48b71cb0b81b16
 MISC metadata.xml 206 SHA256 e8bae0ea2f16b0ad92858b68718c01ab85b5e6995a35b88c74e4ad9772b9f813 SHA512 f6558663be8014488111639a4eeadc9e691f57f2eb4f3c97d6022a50ab2659fac2df458cefed5e29a6661d59221b15332aefa00c027552a8f4bbefc3988e2a90 WHIRLPOOL b515e201c4f614326c4ee0ef0e13fd9d277e913d96265ecce11b41c9628fa38d1e34f90fab1073527e153a9e2e8929c5fee748a8e5eaf98b58fe15928c8ad457
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJTzl0CAAoJEPGu1DbS6WIAbGcP/iTL9eEcddD7g89KEwplp514
-uKNdeI+QM4RCNMiikGr7TzOGdTYhdNgE5aFVI5gFJfv2/XYIGoAKyWG2by4DI0Y4
-6Mr/UEnop/j0ekF1ViG0U5tOUqGbaJ0LPVXezTajY6CI4ybrFraNwELOr3fPePNC
-X27p+gymfgn/Mx+K5OUv48hBFbzpMFb6yWA1SciT345I+xwtPF2e7nhhQW+I3nQa
-sSDSRZBko1/xQLfCikAy5PXnbYGS+ApMxJZFTtG+kg9QPmt6Kn6OAUHwvsEozzwn
-MCZxypq3kc3moQZJ/hy2bAATVYvh7GAAa3UaUX7jhLP6JVV2De2DlFnOk+oJIvmk
-FFiDVwWO0JSLA7SXj6GmD9hRHUPxbN49c27u8JxPg4ngLZsqzDn5WRE3HFTf5p+J
-gGMUAVDaoLrOVppGfh0RFdTDZ4ekN5ha8glQCL6N/QN5AgRxIcVj26fH3l0ua6W4
-Qq2/g/OsbyE/a9bJqUXuIaBYxZU3t0Dw8lgg2IvABx962OxVnkYntzZj3jMZsVAZ
-Uhf4SMjAIt2SA7667Br6IzLJ+PjEPzLkMvRRfG0vUBhtMfBRutG/tXlBBY8kC67w
-KiItcs8CirBSMcWNK3Z2iGimWnd/I7P05Hf8McL4HTnpJNrizCTlgRoQTf+oow0E
-i+xJzKF3Cyyy9sHVq7B/
-=iLoJ
+iEYEAREIAAYFAlPw8ZYACgkQblQW9DDEZTjzmwCgnD8kbmTeyD61BGjM3feyaApp
+RscAoJWSeoRs7brNqTjXBlFDj/MrL50I
+=28Y6
 -----END PGP SIGNATURE-----
