@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/openrc
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.303 2014/08/12 01:22:44 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.304 2014/08/17 18:15:19 williamh Exp $
+
+*openrc-0.13 (17 Aug 2014)
+
+  17 Aug 2014; William Hubbs <williamh@gentoo.org> +openrc-0.13.ebuild:
+  Version bump, bug #481182 tracks changes
 
   12 Aug 2014; William Hubbs <williamh@gentoo.org> openrc-9999.ebuild:
   install feature removal schedule
